<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:title="@string/principal"
            android:icon="@drawable/ic_main" />

        <item
            android:id="@+id/nav_listas_guardadas"
            android:title="@string/listas_guardadas"
            android:icon="@drawable/ic_list" />

        <item
            android:id="@+id/nav_historial_compras"
            android:title="@string/historial_compras"
            android:icon="@drawable/ic_history_black_24dp" />

    </group>

    <item android:title="@string/mi_perfil">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/profile"
                android:title="@string/perfil" />
            <item
                android:id="@+id/nav_pago"
                android:icon="@drawable/money"
                android:title="@string/perfil" />
        </menu>
    </item>
}}{'
</menu>
